--- a/invent/templates/basic.html
+++ b/invent/templates/basic.html
@@ -22,11 +22,11 @@
 {% if request.user.is_authenticated %}
 <li class="nav-item nav-link a"><i class="fas fa-user-plus"></i> {{request.user}} </li>
 <li class="nav-item"> <a href="{% url 'logout' %}" class="nav-link a"><i class="fas fa-sign-out-alt"></i> Logout </a> </li>
-{% endif %}
 </ul>
 <ul class=" navbar-nav ml-auto">
-<li class="nav-item"> <a href="{% url 'inventory' %}" class="nav-link a"><i class="fas fa-sign-out-alt"></i> Client Inventory </a> </li>
+<li class="nav-item"> <a href="{% url 'inventory' %}" class="nav-link a"><i class="fas fa-sign-out-alt"></i> Client Inventory </a> 
 </ul>
+{% endif %}
 </div>
 </nav>
     {% block body %}{% endblock body %}
